fixed header label on IE

--- a/sli/dashboard/src/main/webapp/static/css/common.css
+++ b/sli/dashboard/src/main/webapp/static/css/common.css
@@ -142,7 +142,7 @@ h7 {
     font-style: normal;
     font-weight: lighter;
 }
-h10 {
+.banner-label {
     color: #D8D8D8;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 36px;
